--- a/app/templates/pricing.html
+++ b/app/templates/pricing.html
@@ -423,7 +423,7 @@
               <li><a href="/login" class="text-gray-300 hover:text-white transition-colors">Login / Register</a></li>
               <li><a href="#" class="text-gray-300 hover:text-white transition-colors">API Documentation</a></li>
               <li><a href="#" class="text-gray-300 hover:text-white transition-colors">Developer Guide</a></li>
-              <li><a href="#" class="text-gray-300 hover:text-white transition-colors">Blog</a></li>
+              <li><a href="/blog" class="text-gray-300 hover:text-white transition-colors">Blog</a></li>
               <li><a href="#" class="text-gray-300 hover:text-white transition-colors">Status Page</a></li>
             </ul>
           </div>
